avni-project/avni-security#19 - conditionally enable csrf

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -48,6 +48,7 @@ spring.security.user.password=secret
 management.security.roles=SUPERUSER
 avni.idp.type=${AVNI_IDP_TYPE:cognito}
 avni.blacklisted.urls-file=${AVNI_BLACKLISTED_URLS_FILE:}
+avni.csrf.enabled=${AVNI_CSRF_ENABLED:true}
 
 # Cognito
 cognito.clientid=${OPENCHS_CLIENT_ID:dummy}
@@ -108,7 +109,6 @@ keycloak.ssl-required=external
 keycloak.credentials.secret=${OPENCHS_KEYCLOAK_CLIENT_SECRET:dummy}
 keycloak.use-resource-role-mappings=true
 avni.keycloak.client=avni-client
-avni.connectToKeycloak=${OPENCHS_KEYCLOAK_ENABLED:false}
 avni.keycloak.verify.token.audience=avni-server
 avni.keycloak.user.email.verified=email_verified
 avni.keycloak.user.preferred.username=preferred_username
