--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -70,7 +70,6 @@ keycloak.ssl-required=external
 keycloak.credentials.secret=${OPENCHS_KEYCLOAK_CLIENT_SECRET:dummy}
 keycloak.use-resource-role-mappings=true
 avni.keycloak.client=avni-client
-avni.connectToKeycloak=${OPENCHS_KEYCLOAK_ENABLED:false}
 avni.keycloak.verify.token.audience=avni-server
 avni.keycloak.user.email.verified=email_verified
 avni.keycloak.user.preferred.username=preferred_username
@@ -93,3 +92,5 @@ avni.messagingScheduleMillis=${OPENCHS_MESSAGE_SEND_JOB_SCHEDULE:300000}
 
 avni.idp.type=${AVNI_IDP_TYPE:none}
 avni.blacklisted.urls-file=
+
+avni.csrf.enabled=false
