avniproject/avni-security#19 - API alone ignored for csrf checks for production use. enable/disabled property used for testing.

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -48,6 +48,7 @@ spring.security.user.password=secret
 management.security.roles=SUPERUSER
 avni.idp.type=${AVNI_IDP_TYPE:cognito}
 avni.blacklisted.urls-file=${AVNI_BLACKLISTED_URLS_FILE:}
+avni.csrf.enabled=true
 
 # Cognito
 cognito.clientid=${OPENCHS_CLIENT_ID:dummy}
