--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -92,3 +92,4 @@ avni.messagingScheduleMillis=${OPENCHS_MESSAGE_SEND_JOB_SCHEDULE:300000}
 
 avni.idp.type=${AVNI_IDP_TYPE:none}
 avni.blacklisted.urls-file=
+avni.csrf.enabled=false
