#0 | Env var for CSRF check

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -49,7 +49,7 @@ management.security.roles=SUPERUSER
 avni.idp.type=${AVNI_IDP_TYPE:cognito}
 avni.webapp.timeout.in.minutes=${AVNI_WEBAPP_TIMEOUT:20}
 avni.blacklisted.urls-file=${AVNI_BLACKLISTED_URLS_FILE:}
-avni.csrf.enabled=true
+avni.csrf.enabled=${AVNI_CSRF_ENABLED:true}
 avni.web.validHosts=${AVNI_WEB_VALIDHOSTS:}
 
 # Cognito
