#794 | Allow local post syncDetails by defaulting AVNI_CSRF_ENABLED to false

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -55,7 +55,7 @@ management.security.roles=SUPERUSER
 avni.idp.type=${AVNI_IDP_TYPE:cognito}
 avni.webapp.timeout.in.minutes=${AVNI_WEBAPP_TIMEOUT:21600}
 avni.blacklisted.urls-file=${AVNI_BLACKLISTED_URLS_FILE:}
-avni.csrf.enabled=${AVNI_CSRF_ENABLED:true}
+avni.csrf.enabled=${AVNI_CSRF_ENABLED:false}
 avni.web.validHosts=${AVNI_WEB_VALIDHOSTS:}
 avni.web.payload.encoding=${AVNI_WEB_PAYLOAD_ENCODING:false}
 
